--- a/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
+++ b/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
@@ -212,13 +212,14 @@
      "height": 478
     },
     "id": "JrbbYUHrdnj6",
-    "outputId": "af867312-a6cd-40f7-9cf9-13e92f4c376f"
+    "outputId": "af867312-a6cd-40f7-9cf9-13e92f4c376f",
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2438ecb5eb3247498e0b231bb74cbc0d",
+       "model_id": "bb5ebe8c2862403e84b73acdb163570f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -727,6 +728,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d76f989c-08ed-41a8-b02e-5cf377a84512",
+   "metadata": {},
+   "source": [
+    "#### Transformação\n",
+    "\n",
+    "Vamos renomear a coluna que indica o nome do parlamentar para facilitar o tratamento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "96eff0cf-b92d-4734-a623-3e8344bcb061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\"nome_parlamentar_emenda_plano_acao\": \"nome\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d97279f-bb9e-4acd-b622-b94d2d739631",
    "metadata": {},
    "source": [
@@ -735,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b6c57745-ced8-405e-ba3c-68e3dadcf85d",
    "metadata": {},
    "outputs": [],
@@ -745,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ce7ee492-7d99-4948-bf12-ae739e576697",
    "metadata": {},
    "outputs": [],
@@ -771,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b9bd0f32-aa50-4438-84c6-f1d5814d10f6",
    "metadata": {
     "colab": {
@@ -1020,7 +1041,7 @@
        "[513 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f07fe9e9-8d7c-4bee-b342-df5edf662b9a",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "94f96b44-9658-43e2-8365-8dd2002d11b4",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "021b7bb2-8cea-4a39-a631-ba637fd71e44",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1228,7 @@
        "[81 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4fafc2fc-b766-427f-a673-c2805b31c2a7",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "11562256-c2ce-4abd-bfc6-b1db1268e54b",
    "metadata": {},
    "outputs": [],
