Add workaround for tqdm in pyodide

--- a/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
+++ b/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
@@ -39,7 +39,8 @@
     "\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "tqdm.monitor_interval = 0"
    ]
   },
   {
@@ -219,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb5ebe8c2862403e84b73acdb163570f",
+       "model_id": "738a45c2489a4ba082f846c5244cbca0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,6 +422,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10929</th>\n",
+       "      <td>65930</td>\n",
+       "      <td>09032024-065930</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Especial</td>\n",
+       "      <td>CIENTE</td>\n",
+       "      <td>14197768000101</td>\n",
+       "      <td>MUNICIPIO DE BREJOES</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>104</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3694</td>\n",
+       "      <td>11</td>\n",
+       "      <td>202436940011</td>\n",
+       "      <td>202436940011-Jorge Solla</td>\n",
+       "      <td>6-Segurança Pública / 181-Policiamento , 6-Seg...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500000.0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10930</th>\n",
        "      <td>74317</td>\n",
        "      <td>09032024-074317</td>\n",
        "      <td>2024</td>\n",
@@ -441,30 +466,6 @@
        "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>670000.0</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10930</th>\n",
-       "      <td>69119</td>\n",
-       "      <td>09032024-069119</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Especial</td>\n",
-       "      <td>CIENTE</td>\n",
-       "      <td>14196042000154</td>\n",
-       "      <td>TEOLÂNDIA</td>\n",
-       "      <td>BA</td>\n",
-       "      <td>104</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3906</td>\n",
-       "      <td>5</td>\n",
-       "      <td>202439060005</td>\n",
-       "      <td>202439060005-Alex Santana</td>\n",
-       "      <td>8-Assistência Social / 244-Assistência Comunit...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1530737.0</td>\n",
-       "      <td>2469263.0</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,8 +553,8 @@
        "3              72493   09032024-072493            2024              Especial   \n",
        "4              73453   09032024-073453            2024              Especial   \n",
        "...              ...               ...             ...                   ...   \n",
-       "10929          74317   09032024-074317            2024              Especial   \n",
-       "10930          69119   09032024-069119            2024              Especial   \n",
+       "10929          65930   09032024-065930            2024              Especial   \n",
+       "10930          74317   09032024-074317            2024              Especial   \n",
        "10931          73476   09032024-073476            2024              Especial   \n",
        "10932          72488   09032024-072488            2024              Especial   \n",
        "10933          69007   09032024-069007            2024              Especial   \n",
@@ -565,8 +566,8 @@
        "3                  CIENTE               18114264000131   \n",
        "4                  CIENTE               18114264000131   \n",
        "...                   ...                          ...   \n",
-       "10929              CIENTE               75368928000122   \n",
-       "10930              CIENTE               14196042000154   \n",
+       "10929              CIENTE               14197768000101   \n",
+       "10930              CIENTE               75368928000122   \n",
        "10931              CIENTE               18094870000132   \n",
        "10932              CIENTE               46362927000172   \n",
        "10933              CIENTE               02295772000123   \n",
@@ -578,8 +579,8 @@
        "3                  MUNICIPIO DE ESPERA FELIZ                         MG   \n",
        "4                  MUNICIPIO DE ESPERA FELIZ                         MG   \n",
        "...                                      ...                        ...   \n",
-       "10929                   MUNICIPIO DE MAMBORE                         PR   \n",
-       "10930                              TEOLÂNDIA                         BA   \n",
+       "10929                   MUNICIPIO DE BREJOES                         BA   \n",
+       "10930                   MUNICIPIO DE MAMBORE                         PR   \n",
        "10931      MUNICIPIO DE SENHORA DOS REMEDIOS                         MG   \n",
        "10932                    MUNICIPIO DE BROTAS                         SP   \n",
        "10933                     MUNICIPIO DE GOIAS                         GO   \n",
@@ -604,8 +605,8 @@
        "3                                     3731   \n",
        "4                                     4057   \n",
        "...                                    ...   \n",
-       "10929                                 4313   \n",
-       "10930                                 3906   \n",
+       "10929                                 3694   \n",
+       "10930                                 4313   \n",
        "10931                                 4057   \n",
        "10932                                 3730   \n",
        "10933                                 1960   \n",
@@ -617,8 +618,8 @@
        "3                                             9   \n",
        "4                                             3   \n",
        "...                                         ...   \n",
-       "10929                                         1   \n",
-       "10930                                         5   \n",
+       "10929                                        11   \n",
+       "10930                                         1   \n",
        "10931                                         3   \n",
        "10932                                        11   \n",
        "10933                                        17   \n",
@@ -630,8 +631,8 @@
        "3                             202437310009   \n",
        "4                             202440570003   \n",
        "...                                    ...   \n",
-       "10929                         202443130001   \n",
-       "10930                         202439060005   \n",
+       "10929                         202436940011   \n",
+       "10930                         202443130001   \n",
        "10931                         202440570003   \n",
        "10932                         202437300011   \n",
        "10933                         202419600017   \n",
@@ -643,8 +644,8 @@
        "3                         202437310009-Misael Varella   \n",
        "4                            202440570003-Pinheirinho   \n",
        "...                                               ...   \n",
-       "10929                         202443130001-Beto Preto   \n",
-       "10930                       202439060005-Alex Santana   \n",
+       "10929                        202436940011-Jorge Solla   \n",
+       "10930                         202443130001-Beto Preto   \n",
        "10931                        202440570003-Pinheirinho   \n",
        "10932                    202437300011-Miguel Lombardi   \n",
        "10933                       202419600017-Rubens Otoni   \n",
@@ -656,8 +657,8 @@
        "3      10-Saúde / 301-Atenção Básica , 10-Saúde / 302...     \n",
        "4      10-Saúde / 301-Atenção Básica , 10-Saúde / 302...     \n",
        "...                                                  ...     \n",
-       "10929  15-Urbanismo / 451-Infraestrutura Urbana , 20-...     \n",
-       "10930  8-Assistência Social / 244-Assistência Comunit...     \n",
+       "10929  6-Segurança Pública / 181-Policiamento , 6-Seg...     \n",
+       "10930  15-Urbanismo / 451-Infraestrutura Urbana , 20-...     \n",
        "10931  6-Segurança Pública / 181-Policiamento , 6-Seg...     \n",
        "10932           15-Urbanismo / 451-Infraestrutura Urbana     \n",
        "10933  14-Direitos da Cidadania / 422-Direitos Indivi...     \n",
@@ -683,7 +684,7 @@
        "4                              None                      0.0   \n",
        "...                             ...                      ...   \n",
        "10929                          None                      0.0   \n",
-       "10930                          None                1530737.0   \n",
+       "10930                          None                      0.0   \n",
        "10931                          None                      0.0   \n",
        "10932                          None                      0.0   \n",
        "10933                          None                      0.0   \n",
@@ -695,8 +696,8 @@
        "3                           500000.0          21  \n",
        "4                          2000000.0          21  \n",
        "...                              ...         ...  \n",
-       "10929                       670000.0          21  \n",
-       "10930                      2469263.0          21  \n",
+       "10929                       500000.0          21  \n",
+       "10930                       670000.0          21  \n",
        "10931                       500000.0          21  \n",
        "10932                       300000.0          21  \n",
        "10933                       400000.0          21  \n",
