--- a/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
+++ b/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
@@ -20,6 +20,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2661945-3c59-4a2b-a2da-771d576536a4",
+   "metadata": {},
+   "source": [
+    "Pacotes a instalar (necessário no kernel pyodide do Jupyterlite):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8e6b37ce-2937-4fe9-8ffa-b10ffb5c9510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q fastparquet ipywidgets tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "504d6003-6758-44ce-9822-463a1d78a3bc",
    "metadata": {},
    "source": [
@@ -28,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d3b578b1-091c-47c6-bf93-0ac7d5b32bf2",
    "metadata": {
     "id": "BVT-mAeRIssQ"
@@ -63,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "086fea7a-2959-4c21-8f52-25709519ba1f",
    "metadata": {
     "id": "BZitggHSdQ6W"
@@ -77,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e29fc43f-0ee7-4087-a506-86fd805e25a6",
    "metadata": {
     "id": "UsWJdtS9dWbT"
@@ -98,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "97510709-b848-4b52-9228-6630b8f6406e",
    "metadata": {
     "colab": {
@@ -124,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c08a875e-e7df-4d43-b2f2-4d8c77af367f",
    "metadata": {
     "id": "RTCngeaLdcXP"
@@ -145,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "db332f01-a334-4020-86a0-aa757be26871",
    "metadata": {
     "colab": {
@@ -178,7 +204,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "054e0dc2-9c62-4aa6-bee2-0de9edd5ed13",
    "metadata": {
     "colab": {
@@ -220,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "738a45c2489a4ba082f846c5244cbca0",
+       "model_id": "a8d590ed695842169e318663480bc238",
        "version_major": 2,
        "version_minor": 0
       },
@@ -705,7 +731,7 @@
        "[10934 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "96eff0cf-b92d-4734-a623-3e8344bcb061",
    "metadata": {},
    "outputs": [],
@@ -757,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b6c57745-ced8-405e-ba3c-68e3dadcf85d",
    "metadata": {},
    "outputs": [],
@@ -767,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ce7ee492-7d99-4948-bf12-ae739e576697",
    "metadata": {},
    "outputs": [],
@@ -793,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b9bd0f32-aa50-4438-84c6-f1d5814d10f6",
    "metadata": {
     "colab": {
@@ -1042,7 +1068,7 @@
        "[513 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f07fe9e9-8d7c-4bee-b342-df5edf662b9a",
    "metadata": {},
    "outputs": [],
@@ -1084,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "94f96b44-9658-43e2-8365-8dd2002d11b4",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "021b7bb2-8cea-4a39-a631-ba637fd71e44",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1255,7 @@
        "[81 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "4fafc2fc-b766-427f-a673-c2805b31c2a7",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "11562256-c2ce-4abd-bfc6-b1db1268e54b",
    "metadata": {},
    "outputs": [],
