Include party in plot, migrate charts to plotly

--- a/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
+++ b/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
@@ -246,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8d590ed695842169e318663480bc238",
+       "model_id": "6f17563acf1a4e56898ace36f1b8b00e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -855,7 +855,7 @@
        "      <th>nome</th>\n",
        "      <th>partido</th>\n",
        "      <th>uriPartido</th>\n",
-       "      <th>siglaUf</th>\n",
+       "      <th>uf</th>\n",
        "      <th>idLegislatura</th>\n",
        "      <th>urlFoto</th>\n",
        "      <th>email</th>\n",
@@ -1026,18 +1026,18 @@
        "511  Zezinho Barbary            PP   \n",
        "512            Zucco            PL   \n",
        "\n",
-       "                                            uriPartido siglaUf  idLegislatura  \\\n",
-       "0    https://dadosabertos.camara.leg.br/api/v2/part...      MT             57   \n",
-       "1    https://dadosabertos.camara.leg.br/api/v2/part...      AP             57   \n",
-       "2    https://dadosabertos.camara.leg.br/api/v2/part...      AM             57   \n",
-       "3    https://dadosabertos.camara.leg.br/api/v2/part...      SP             57   \n",
-       "4    https://dadosabertos.camara.leg.br/api/v2/part...      BA             57   \n",
-       "..                                                 ...     ...            ...   \n",
-       "508  https://dadosabertos.camara.leg.br/api/v2/part...      SC             57   \n",
-       "509  https://dadosabertos.camara.leg.br/api/v2/part...      MG             57   \n",
-       "510  https://dadosabertos.camara.leg.br/api/v2/part...      PR             57   \n",
-       "511  https://dadosabertos.camara.leg.br/api/v2/part...      AC             57   \n",
-       "512  https://dadosabertos.camara.leg.br/api/v2/part...      RS             57   \n",
+       "                                            uriPartido  uf  idLegislatura  \\\n",
+       "0    https://dadosabertos.camara.leg.br/api/v2/part...  MT             57   \n",
+       "1    https://dadosabertos.camara.leg.br/api/v2/part...  AP             57   \n",
+       "2    https://dadosabertos.camara.leg.br/api/v2/part...  AM             57   \n",
+       "3    https://dadosabertos.camara.leg.br/api/v2/part...  SP             57   \n",
+       "4    https://dadosabertos.camara.leg.br/api/v2/part...  BA             57   \n",
+       "..                                                 ...  ..            ...   \n",
+       "508  https://dadosabertos.camara.leg.br/api/v2/part...  SC             57   \n",
+       "509  https://dadosabertos.camara.leg.br/api/v2/part...  MG             57   \n",
+       "510  https://dadosabertos.camara.leg.br/api/v2/part...  PR             57   \n",
+       "511  https://dadosabertos.camara.leg.br/api/v2/part...  AC             57   \n",
+       "512  https://dadosabertos.camara.leg.br/api/v2/part...  RS             57   \n",
        "\n",
        "                                               urlFoto  \\\n",
        "0    https://www.camara.leg.br/internet/deputado/ba...   \n",
@@ -1085,7 +1085,7 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Renomeia a coluna de partido para ficar fácil cruzar os dados depois\n",
-    "df = df.rename(columns={\"siglaPartido\":\"partido\"})\n",
+    "df = df.rename(columns={\"siglaPartido\":\"partido\", \"siglaUf\":\"uf\"})\n",
     "\n",
     "df"
    ]
