Add copy of Camara dos Deputados data due to CORS restrictions

--- a/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
+++ b/jupyterlite/notebooks/emendas/1 Baixar os dados.ipynb
@@ -61,6 +61,7 @@
    },
    "outputs": [],
    "source": [
+    "import json\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
@@ -246,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f17563acf1a4e56898ace36f1b8b00e",
+       "model_id": "3827f4e846ef4a32b16153e2f0c0a157",
        "version_major": 2,
        "version_minor": 0
       },
@@ -818,6 +819,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b7fe792-6eea-4e45-a5a8-5df8854cf273",
+   "metadata": {},
+   "source": [
+    "Infelizmente a API da Câmara dos Deputados usa cabeçalho\n",
+    "[CORS](https://pt.wikipedia.org/wiki/Cross-origin_resource_sharing)\n",
+    "com valor restritivo. Isso significa que não é possível baixar os\n",
+    "dados programaticamente por um navegador web, que seria o caso do\n",
+    "Jupyterlite."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "b9bd0f32-aa50-4438-84c6-f1d5814d10f6",
@@ -1074,12 +1087,22 @@
     }
    ],
    "source": [
-    "# URL da API da Câmara para obter partidos\n",
+    "# URL da API da Câmara para obter deputados e partidos\n",
     "url = \"https://dadosabertos.camara.leg.br/api/v2/deputados\"\n",
     "\n",
     "# Requisição dos dados\n",
     "response = requests.get(url, params={})\n",
-    "data = response.json()[\"dados\"]\n",
+    "if response.status_code == 0:  # download barrado pelo CORS da Câmara, que não permite leitura no navegador!\n",
+    "    print(\n",
+    "        \"Download de dados barrado pela regra CORS da API da Câmara dos Deputados!\\n\"\n",
+    "        \"Lendo uma cópia guardada em arquivo (pode estar desatualizado).\"\n",
+    "    )\n",
+    "    with open(\"dados/deputados.json\", \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "else:  # tudo normal, conseguiu baixar\n",
+    "    data = response.json()[\"dados\"]\n",
+    "    with open(\"dados/deputados.json\", \"w\") as f:\n",
+    "        json.dump(data, f)\n",
     "\n",
     "# Convertendo para DataFrame\n",
     "df = pd.DataFrame(data)\n",
